@@ -402,7 +402,7 @@ sk_sp<SkImage> SkImage::makeNonTextureImage() const {
     return this->makeRasterImage();
 }
 
-sk_sp<SkImage> SkImage::makeRasterImage() const {
+sk_sp<SkImage> SkImage::makeRasterImage(CachingHint chint) const {
     SkPixmap pm;
     if (this->peekPixels(&pm)) {
         return sk_ref_sp(const_cast<SkImage*>(this));
@@ -416,7 +416,7 @@ sk_sp<SkImage> SkImage::makeRasterImage() const {
 
     sk_sp<SkData> data = SkData::MakeUninitialized(size);
     pm = {fInfo.makeColorSpace(nullptr), data->writable_data(), fInfo.minRowBytes()};
-    if (!this->readPixels(pm, 0, 0)) {
+    if (!this->readPixels(pm, 0, 0, chint)) {
         return nullptr;
     }
 
